cc-base/main/default/objects/Opportunity/fields/Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_URL__c</fullName>
    <description>Link to Job Application</description>
    <label>Application URL</label>
    <type>Url</type>
</CustomField>