cc-base/main/default/objects/Opportunity/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Field that holds the Opportunity description</description>
    <label>Job Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>