cc-base/main/default/objects/Opportunity/recordTypes/Career_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Career_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Career Opportunity Process</businessProcess>
    <description>Opportunities to advance career</description>
    <label>Career Opportunity</label>
</RecordType>