cc-base/main/default/objects/Opportunity/listViews/Active_Job_Opportunities.listView-meta.xml
<ListView>
    <fullName>Active_Job_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Career_Opportunity</value>
    </filters>
    <label>Active Job Opportunities</label>
</ListView>